--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ a {
   color: var(--color-6);
   transition: all ease .3s;
 }
-a:hover{
+a:hover {
   color: var(--color-1);
 }
 .trans {
@@ -136,7 +136,7 @@ img {
   position: absolute;
   left: 15px;
   bottom: 0;
-  width: 97.5%;
+  width: 97.3%;
   height: 1px;
   background-color: #d9d9d9;
 }
@@ -170,11 +170,10 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -0.09rem;
+  bottom: -2px;
   width: 4rem;
-  height: 2px;
+  height: 3px;
   background-color: var(--color-1);
-  border-radius: var(--radius);
 }  
 .heading-title {
   position: relative;
@@ -198,13 +197,13 @@ img {
 
 .swiper img {
   width: 100%;
-  max-height: 592px;
+  min-height: 592px;
   object-fit: cover;
 } 
 
 .swiper .swiper-pagination {
   position: absolute;
-  bottom: 12%!important;
+  top: 92%!important;
   left: 0;
   width: 100%;
   padding: 0 20px;
@@ -229,7 +228,7 @@ img {
 
 .swiper .swiper-button-next,.swiper .swiper-button-prev {
   cursor: pointer;
-  color: var(--color-6);
+  color: var(--color-7);
   transition: all ease .3s;
 }
 
@@ -366,22 +365,34 @@ img {
 }
 
 .service-home-items .service-home-title {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: bold;
   text-transform: capitalize;
   color: var(--color-5);
-  border-bottom: 1px dashed var(--color-7);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .service-home-items .service-home-title::before {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -0.09rem;
+  bottom: 0;
   width: 4rem;
-  height: 2px;
+  height: 3px;
   background-color: var(--color-1);
-  border-radius: var(--radius);
+  z-index: 2;
+}
+
+.service-home-items .service-home-title::after {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 100%;
+  border-bottom: 1px dashed var(--color-7);
 }
 
 .service-home-items .service-home-desc {
@@ -395,8 +406,8 @@ img {
   overflow: hidden;
 }
 /* end services */
-/* begin wacth more btn */
-.wacth-more-btn {
+/* begin watch more btn */
+.watch-more-btn {
   font-size: 1.4rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -404,10 +415,12 @@ img {
   color: var(--color-1);
 }
 
-.wacth-more-btn:hover {
+.watch-more-btn:hover {
   text-decoration: underline;
 }
-/* end wacth more btn */
+/* end watch more btn */
+/* map home */
+/* end map home */
 /* begin contact */
 .contact-form-inner {
   display: grid;
@@ -420,6 +433,10 @@ img {
   font-weight: bold;
   text-transform: capitalize;
   color: var(--color-5);
+}
+
+.contact-form-title span {
+  color: var(--color-3);
 }
 
 .contact-input {
@@ -477,7 +494,7 @@ img {
 }
 
 .happy-list-home-job {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: normal;
   color: var(--color-7);
   line-height: 1.6;
@@ -507,29 +524,41 @@ img {
 /* begin gallery */
 .gallery-home {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
 }
+
+.gallery-home img {
+  width: 100%;
+  border-radius: var(--radius);
+}
 /* end galery  */
+/* begin light box */
+.lightbox {
+  display: flex;
+  flex-direction: column;
+}
+/* begin  */
+.lb-dataContainer {
+  order: 1;
+  position: relative;
+}
+
+.lb-outerContainer {
+  order: 2;
+}
+
+.lb-data .lb-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: translateX(12px) translateY(-8px);
+  z-index: 3;
+}
+/* end light box */
 /* begin news */
-
-.news-home-items {
-  height: 420px;
-  overflow-y: scroll;
-}
-
-.news-home-items::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
-  background-color: #aaa; /* or add it to the track */
-}
-
-.news-home-items::-webkit-scrollbar-thumb {
-  background: #000;
-}
-
 .news-home-img {
-  width: 45%;
+  width: 35%;
 }
 
 .news-home-img img {
@@ -538,27 +567,59 @@ img {
 }
 
 .news-home-contents {
-  width: 55%;
+  width: 65%;
 }
 
 .news-home-title {
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: bold;
   text-transform: capitalize;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.news-home-title a {
   color: var(--color-5);
 }
 
+.news-home-title::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  width: 4rem;
+  height: 3px;
+  background-color: var(--color-1);
+  z-index: 2;
+}
+
+.news-home-title::after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  width: 100%;
+  border-bottom: 1px dashed var(--color-7);
+}
+
 .news-home-desc {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: normal;
   color: var(--color-7);
   line-height: 1.6;
   display: -webkit-box;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
 /* end news home */
+/* begin simply scroll */
+.vert .simply-scroll-list li {
+  height: auto;
+  width: auto;
+}
 /* begin partner home */
 .partner-home {
   display: grid;
@@ -668,55 +729,154 @@ img {
 }
 /* responsive */
 
-@media (min-width: 759px) and (max-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1200px) {
+  .service-home-items {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+  .service-home-items .service-home-title {
+    font-size: 1.9rem;
+  }
+  /* news home rssponsive */
+  .news-home-items {
+    height: 350px;
+    overflow-y: scroll;
+  }
+
+  .news-home-title {
+    font-size: 1.4rem;
+    -webkit-line-clamp: 2;
+    }
+  .news-home-desc {
+    font-size: 1.4rem;
+    -webkit-line-clamp: 2;
+  }
+    
+  .news-home-img {
+    width: 35%;
+  }
+
+  .news-home-contents {
+    width: 65%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  /* border responsive */
+  .border-b::after {
+    left: 10px;
+    width: 96.5%;
+  }
+  .service-home-items {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+  /* widget responsive */
+  .widget-home {
+    margin-top: -11.6rem;
+  }
+  /* news home responsive */
+  .news-home-items {
+    height: 220px;
+    overflow-y: scroll;
+  }
+
+  .news-home-title {
+    font-size: 1.4rem;
+  -webkit-line-clamp: 2;
+  }
+
+  .news-home-desc {
+    font-size: 1.3rem;
+  -webkit-line-clamp: 2;
+}
+  
+  .news-home-img {
+    width: 36%;
+  }
+
+  .news-home-contents {
+    width: 64%;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 767px) {
+  /* border responsive */
+  .border-b::after {
+    left: 15px;
+    width: 94.5%;
+  }
   .service-home-items {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
   }
-  /* news home rssponsive */
-  .news-home-img {
-    width: 55%;
+  /* swiper responsive */
+  .swiper .swiper-button-next {
+    display: none;
   }
-
-  .news-home-contents {
-    width: 45%;
-  }
-}
-
-@media (min-width: 577px) and (max-width: 758px) {
-  .service-home-items {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: auto;
+  .swiper .swiper-button-prev {
+    display: none;
   }
   /* widget responsive */
   .widget-home {
-    margin-top: 0;
+    border-radius: var(--radius);
+    margin-top: -22rem;
   }
   .widget-home .widget-item {
     float: none;
     width: 100%;
   }
+  .widget-home .widget-item:not(:last-child)::after {
+    display: none;
+  }
   /* news home rssponsive */
+  .news-home-title {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  -webkit-line-clamp: 2;
+    }
+    
+  .news-home-items {
+    height: auto;
+    overflow: visible;
+  }
+  
   .news-home-img {
-    width: 55%;
+    width: 30%;
   }
 
   .news-home-contents {
-    width: 45%;
+    width: 70%;
   }
 }
 
-@media (max-width: 576px) {
+@media (min-width:420px) and (max-width: 576px) {
+  /* border responsive */
+  .border-b::after {
+    left: 15px;
+    width: 90%;
+  }
   .service-home-items {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+  /* swiper responsive */
+  .swiper .swiper-button-next {
+    display: none;
+  }
+  .swiper .swiper-button-prev {
+    display: none;
   }
   /* widget responsive */
   .widget-home {
-    margin-top: 0;
+    border-radius: var(--radius);
+    margin-top: -22rem;
   }
   .widget-home .widget-item {
     float: none;
     width: 100%;
+  }
+  .widget-home .widget-item:not(:last-child)::after {
+    display: none;
   }
   /* owl carousel responsive */
   .owl-carousel .owl-nav {
@@ -729,12 +889,85 @@ img {
     margin-top: 1rem;
   }
   /* news home rssponsive */
+  .news-home-title {
+  font-size: 1.5rem;
+  -webkit-line-clamp: 2;
+    }
+    
+  .news-home-items {
+    height: auto;
+    overflow: visible;
+  }
+  
   .news-home-img {
-    width: 100%;
+    width: 35%;
   }
 
   .news-home-contents {
+    width: 65%;
+  }
+}
+
+@media (max-width:419px) {
+  /* border responsive */
+  .border-b::after {
+    left: 15px;
+    width: 90%;
+  }
+  .service-home-items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  /* swiper responsive */
+  .swiper .swiper-button-next {
+    display: none;
+  }
+  .swiper .swiper-button-prev {
+    display: none;
+  }
+  /* widget responsive */
+  .widget-home {
+    border-radius: var(--radius);
+    margin-top: -22rem;
+  }
+  .widget-home .widget-item {
+    float: none;
     width: 100%;
+  }
+  .widget-home .widget-item:not(:last-child)::after {
+    display: none;
+  }
+  /* owl carousel responsive */
+  .owl-carousel .owl-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    top: 0;
+    right: 0;
+    margin-top: 1rem;
+  }
+  /* news home rssponsive */
+  .news-home-title {
+  font-size: 1.4rem;
+  -webkit-line-clamp: 2;
+    }
+
+  .news-home-desc {
+    font-size: 1.3rem;
+    line-height: 1.3;
+  }
+    
+  .news-home-items {
+    height: auto;
+    overflow: visible;
+  }
+  
+  .news-home-img {
+    width: 40%;
+  }
+
+  .news-home-contents {
+    width: 60%;
   }
 }
 
